@@ -1,26 +1,28 @@
 package com.sangjun.order.container;
 
 import com.sangjun.common.dataaccess.restaurant.entity.RestaurantEntity;
-import com.sangjun.common.dataaccess.restaurant.repository.RestaurantJpaRepository;
 import com.sangjun.common.domain.valueobject.*;
 import com.sangjun.kafka.order.avro.model.OrderApprovalStatus;
 import com.sangjun.kafka.order.avro.model.PaymentStatus;
 import com.sangjun.kafka.order.avro.model.RestaurantOrderStatus;
 import com.sangjun.kafka.order.avro.model.*;
-import com.sangjun.order.dataaccess.customer.entity.CustomerEntity;
-import com.sangjun.order.dataaccess.customer.repository.CustomerJpaRepository;
+import com.sangjun.order.domain.entity.Customer;
 import com.sangjun.order.domain.entity.Order;
-import com.sangjun.order.domain.entity.Product;
-import com.sangjun.order.domain.exception.OrderNotFoundException;
+import com.sangjun.order.domain.event.OrderCancellingEvent;
+import com.sangjun.order.domain.service.dto.CancelOrderCommand;
 import com.sangjun.order.domain.service.dto.create.CreateOrderCommand;
 import com.sangjun.order.domain.service.dto.create.CreateOrderResponse;
-import com.sangjun.order.domain.service.dto.create.OrderAddress;
-import com.sangjun.order.domain.service.dto.create.OrderItem;
-import com.sangjun.order.domain.service.dto.track.TrackOrderQuery;
-import com.sangjun.order.domain.service.dto.track.TrackOrderResponse;
+import com.sangjun.order.domain.service.dto.create.OrderAddressDto;
+import com.sangjun.order.domain.service.dto.create.OrderItemDto;
+import com.sangjun.order.domain.service.ports.input.service.CancelOrderApplicationService;
+import com.sangjun.order.domain.service.ports.input.service.CreateOrderApplicationService;
 import com.sangjun.order.domain.service.ports.input.service.OrderApplicationService;
+import com.sangjun.order.domain.service.ports.output.repository.CustomerRepository;
 import com.sangjun.order.domain.service.ports.output.repository.OrderRepository;
-import com.sangjun.order.domain.valueobject.OrderItemId;
+import com.sangjun.order.domain.service.ports.output.repository.RestaurantRepository;
+import com.sangjun.order.domain.valueobject.OrderItem;
+import com.sangjun.order.domain.valueobject.Product;
+import com.sangjun.order.domain.valueobject.StreetAddress;
 import com.sangjun.order.domain.valueobject.TrackingId;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.consumer.Consumer;
@@ -29,13 +31,14 @@ import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.kafka.core.ConsumerFactory;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.kafka.test.EmbeddedKafkaBroker;
 import org.springframework.kafka.test.context.EmbeddedKafka;
 import org.springframework.kafka.test.utils.KafkaTestUtils;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.event.ApplicationEvents;
+import org.springframework.test.context.event.RecordApplicationEvents;
 import org.springframework.test.context.transaction.TestTransaction;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -45,11 +48,12 @@ import javax.persistence.Query;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeoutException;
+import java.util.stream.Collectors;
 
 import static com.sangjun.order.domain.service.mapper.OrderMapstructMapper.MAPPER;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.when;
 
 
@@ -68,38 +72,34 @@ import static org.mockito.Mockito.when;
 @TestMethodOrder(value = MethodOrderer.Random.class)
 @Transactional
 @Slf4j
+@RecordApplicationEvents
 public class OrderIntegrationTest {
     private static final UUID CUSTOMER_ID = UUID.fromString("f6316e90-1837-4940-b5db-a3c49a9a10ca");
     private static final UUID RESTAURANT_ID = UUID.fromString("ad68afcc-e55e-4e6a-bc6d-95a26a5410ff");
-    private static final UUID ORDER_ID = UUID.fromString("f3b19e90-b5f3-4f68-bbfa-6aa1101ae3e1");
     private static final UUID ORDER_TRACKING_ID = UUID.fromString("4d510cac-290c-408a-a7fc-abc2f3c0efbb");
     private static final UUID PRODUCT_ID_1 = UUID.fromString("cb48e255-cc1c-4fc3-b80c-c4d73ca187dd");
     private static final UUID PRODUCT_ID_2 = UUID.fromString("d9e55ab9-68dc-4af5-b66f-a875b2df95fd");
     private static final Product PRODUCT_1 = Product.builder()
             .id(new ProductId(PRODUCT_ID_1))
-            .name("product1")
             .price(Money.of(new BigDecimal("1000")))
+            .quantity(100)
             .build();
     private static final Product PRODUCT_2 = Product.builder()
             .id(new ProductId(PRODUCT_ID_2))
-            .name("product2")
             .price(Money.of(new BigDecimal("3200")))
+            .quantity(100)
             .build();
-    private static final com.sangjun.order.domain.entity.OrderItem ORDER_ITEM_1 = com.sangjun.order.domain.entity.OrderItem.builder()
-            .orderId(new OrderId(ORDER_ID))
-            .orderItemId(new OrderItemId(1L))
+    private static final OrderItem ORDER_ITEM_1 = OrderItem.builder()
             .price(PRODUCT_1.getPrice())
             .quantity(2)
             .subTotal(PRODUCT_1.getPrice().multiply(2))
-            .product(PRODUCT_1)
+            .productId(PRODUCT_1.getId())
             .build();
-    private static final com.sangjun.order.domain.entity.OrderItem ORDER_ITEM_2 = com.sangjun.order.domain.entity.OrderItem.builder()
-            .orderId(new OrderId(ORDER_ID))
-            .orderItemId(new OrderItemId(2L))
+    private static final OrderItem ORDER_ITEM_2 = OrderItem.builder()
             .price(PRODUCT_2.getPrice())
             .quantity(1)
             .subTotal(PRODUCT_2.getPrice())
-            .product(PRODUCT_2)
+            .productId(PRODUCT_2.getId())
             .build();
     private static final RestaurantEntity RESTAURANT_ENTITY_1 = RestaurantEntity.builder()
             .restaurantId(RESTAURANT_ID)
@@ -119,17 +119,14 @@ public class OrderIntegrationTest {
             .productPrice(PRODUCT_2.getPrice().getAmount())
             .productAvailable(true)
             .build();
-    private static final OrderAddress ORDER_ADDRESS = OrderAddress.builder()
+    private static final OrderAddressDto ORDER_ADDRESS = OrderAddressDto.builder()
             .street("Sillim")
             .city("Seoul")
             .postalCode("4321")
             .build();
     private static final Order ORDER = Order.builder()
-            .id(new OrderId(ORDER_ID))
             .customerId(new CustomerId(CUSTOMER_ID))
-            .trackingId(new TrackingId(ORDER_TRACKING_ID))
             .restaurantId(new RestaurantId(RESTAURANT_ID))
-            .orderStatus(OrderStatus.PENDING)
             .deliveryAddress(MAPPER.toStreetAddress(ORDER_ADDRESS))
             .failureMessages(new ArrayList<>())
             .items(List.of(ORDER_ITEM_1, ORDER_ITEM_2))
@@ -138,18 +135,20 @@ public class OrderIntegrationTest {
 
     @Autowired
     private OrderApplicationService orderApplicationService;
-
-    @MockBean
-    private CustomerJpaRepository customerJpaRepository;
-
-    @MockBean
-    private RestaurantJpaRepository restaurantJpaRepository;
-
+    @Autowired
+    private CreateOrderApplicationService createOrderService;
+    @Autowired
+    private CancelOrderApplicationService cancelOrderService;
+    @Autowired
+    private RestaurantRepository restaurantRepository;
     @Autowired
     private OrderRepository orderRepository;
-
+    @Autowired
+    private CustomerRepository customerRepository;
     @PersistenceContext
     private EntityManager entityManager;
+    @Autowired
+    private ApplicationEvents applicationEvents;
 
     @Autowired
     private EmbeddedKafkaBroker embeddedKafka;
@@ -181,8 +180,15 @@ public class OrderIntegrationTest {
     private Consumer<String, PaymentRequestAvroModel> paymentRequestConsumer;
     private Consumer<String, RestaurantApprovalRequestAvroModel> restaurantRequestConsumer;
 
+    @BeforeEach
+    void setFixtures() {
+        ORDER.initialize();
+    }
+
+
     @BeforeAll
     void setUp() throws Exception {
+        log.info("setting up consumers");
         paymentRequestConsumer = paymentCf.createConsumer("test-payment-request", "1");
         paymentRequestConsumer.subscribe(List.of(paymentRequestTopic));
 
@@ -233,331 +239,315 @@ public class OrderIntegrationTest {
         query.executeUpdate();
     }
 
-
     @Test
-    void 주문이_성공하면_추적번호가_발급된다() {
+    void 주문_성공() {
         //given
-        List<OrderItem> items = new ArrayList<>();
-        OrderItem item1 = getOrderItem(PRODUCT_1, 2);
-        OrderItem item2 = getOrderItem(PRODUCT_2, 1);
-        items.addAll(List.of(item1, item2));
-
-        CreateOrderCommand createOrderCommand = CreateOrderCommand.builder()
-                .customerId(CUSTOMER_ID)
-                .restaurantId(RESTAURANT_ID)
-                .price(item1.getSubTotal().add(item2.getSubTotal()))
-                .items(items)
-                .orderAddress(ORDER_ADDRESS)
+        Money totalPrice = ORDER_ITEM_1.getSubTotal().add(ORDER_ITEM_2.getSubTotal());
+        OrderItemDto orderItemDto1 = createOrderItemDto(ORDER_ITEM_1);
+        OrderItemDto orderItemDto2 = createOrderItemDto(ORDER_ITEM_2);
+        List<OrderItemDto> items = new ArrayList<>(Arrays.asList(orderItemDto1, orderItemDto2));
+        OrderAddressDto orderAddressDto = OrderAddressDto.builder()
+                .city("Seoul")
+                .postalCode("12345")
+                .street("Sillim")
                 .build();
 
-        //when
-        mockCustomerFindById();
-        mockFindByRestaurantIdAndProductIdIn();
-        CreateOrderResponse response = orderApplicationService.createOrder(createOrderCommand);
-
-        //then
-        assertNotNull(response.getOrderTrackingId());
-        Order order = assertDoesNotThrow(() -> orderRepository.findByTrackingId(response.getOrderTrackingId())
-                .orElseThrow(() -> new OrderNotFoundException("Order not found")));
-        assertEquals(response.getOrderTrackingId(), order.getTrackingId().getValue());
-    }
-
-    @Test
-    void 주문이_성공하면_주문상태가_PENDING이다() throws InterruptedException {
-        //given
-        List<OrderItem> items = new ArrayList<>();
-        OrderItem item1 = getOrderItem(PRODUCT_1, 2);
-        OrderItem item2 = getOrderItem(PRODUCT_2, 1);
-        items.addAll(List.of(item1, item2));
-
-        CreateOrderCommand createOrderCommand = CreateOrderCommand.builder()
+        CreateOrderCommand command = CreateOrderCommand.builder()
                 .customerId(CUSTOMER_ID)
                 .restaurantId(RESTAURANT_ID)
-                .price(item1.getSubTotal().add(item2.getSubTotal()))
+                .price(totalPrice.getAmount())
                 .items(items)
-                .orderAddress(ORDER_ADDRESS)
+                .orderAddressDto(orderAddressDto)
                 .build();
-
         //when
+        when(restaurantRepository.findProductsByRestaurantIdInProductIds(any(), anyList()))
+                .thenReturn(List.of(PRODUCT_1, PRODUCT_2));
         mockCustomerFindById();
-        mockFindByRestaurantIdAndProductIdIn();
-        CreateOrderResponse response = orderApplicationService.createOrder(createOrderCommand);
-        Thread.sleep(100);
+
+        CreateOrderResponse resp = createOrderService.createOrder(command);
 
         //then
-        Order order = assertDoesNotThrow(() -> orderRepository.findByTrackingId(response.getOrderTrackingId())
-                .orElseThrow(() -> new OrderNotFoundException("Order not found")));
-        assertEquals(OrderStatus.PENDING, order.getOrderStatus());
-    }
-
-    @Test
-    void 주문이_성공하면_결제요청_메세지가_날아간다() throws InterruptedException {
-        //given
-        List<OrderItem> items = new ArrayList<>();
-        OrderItem item1 = getOrderItem(PRODUCT_1, 2);
-        OrderItem item2 = getOrderItem(PRODUCT_2, 1);
-        items.addAll(List.of(item1, item2));
-
-        CreateOrderCommand createOrderCommand = CreateOrderCommand.builder()
-                .customerId(CUSTOMER_ID)
-                .restaurantId(RESTAURANT_ID)
-                .price(item1.getSubTotal().add(item2.getSubTotal()))
-                .items(items)
-                .orderAddress(ORDER_ADDRESS)
-                .build();
-
-        //when
-        mockCustomerFindById();
-        mockFindByRestaurantIdAndProductIdIn();
-        CreateOrderResponse response = orderApplicationService.createOrder(createOrderCommand);
-        Thread.sleep(100);
-
-        //then
-        Order order = assertDoesNotThrow(() -> orderRepository.findByTrackingId(response.getOrderTrackingId())
-                .orElseThrow(() -> new OrderNotFoundException("Order not found")));
-
-        Map<String, PaymentRequestAvroModel> resultTable = readPaymentRequestRecords();
-        assertTrue(resultTable.containsKey(order.getId().getValue().toString()));
-
-        PaymentRequestAvroModel record = resultTable.get(order.getId().getValue().toString());
-        assertEquals(order.getId().getValue().toString(), record.getOrderId());
-        assertEquals(PaymentOrderStatus.PENDING, record.getPaymentOrderStatus());
-        assertEquals(order.getCustomerId().getValue().toString(), record.getCustomerId());
-        assertEquals(order.getPrice().getAmount(), record.getPrice());
-
+        Order createdOrder = orderRepository.findByTrackingId(new TrackingId(resp.getOrderTrackingId())).get();
+        생성된_주문데이터_확인(totalPrice.getAmount(), orderAddressDto, items, createdOrder);
+        결제요청_메세지가_전송됨(createdOrder);
     }
 
     private void mockCustomerFindById() {
-        CustomerEntity customerEntity = new CustomerEntity(CUSTOMER_ID);
+        Customer customer = new Customer(new CustomerId(CUSTOMER_ID));
 
-        when(customerJpaRepository.findById(CUSTOMER_ID))
-                .thenReturn(Optional.of(customerEntity));
+        when(customerRepository.findById(CUSTOMER_ID))
+                .thenReturn(Optional.of(customer));
     }
 
-    private void mockFindByRestaurantIdAndProductIdIn() {
-        when(restaurantJpaRepository
-                .findByRestaurantIdAndProductIdIn(RESTAURANT_ID, List.of(PRODUCT_ID_1, PRODUCT_ID_2)))
-                .thenReturn(Optional.of(List.of(RESTAURANT_ENTITY_1, RESTAURANT_ENTITY_2)));
-    }
-
-
-    private OrderItem getOrderItem(Product product, int quantity) {
-        return OrderItem.builder()
-                .productId(product.getId().getValue())
-                .quantity(quantity)
-                .price(product.getPrice().getAmount())
-                .subTotal(product.getPrice().multiply(quantity).getAmount())
+    private OrderItemDto createOrderItemDto(OrderItem orderItem) {
+        return OrderItemDto.builder()
+                .price(orderItem.getPrice().getAmount())
+                .subTotal(orderItem.getSubTotal().getAmount())
+                .productId(orderItem.getProductId().getValue())
+                .quantity(orderItem.getQuantity())
                 .build();
     }
 
+    private void 생성된_주문데이터_확인(BigDecimal price,
+                              OrderAddressDto orderAddressDto,
+                              List<OrderItemDto> itemDtoList,
+                              Order createdOrder) {
+        assertThat(createdOrder.getOrderStatus())
+                .isEqualTo(OrderStatus.PENDING);
+        assertThat(createdOrder.getPrice())
+                .isEqualTo(Money.of(price));
+        assertThat(createdOrder.getCustomerId().getValue())
+                .isEqualTo(CUSTOMER_ID);
+        assertThat(createdOrder.getRestaurantId().getValue())
+                .isEqualTo(RESTAURANT_ID);
+        assertThat(createdOrder.getDeliveryAddress())
+                .isEqualTo(StreetAddress.builder()
+                        .city(orderAddressDto.getCity())
+                        .postalCode(orderAddressDto.getPostalCode())
+                        .street(orderAddressDto.getStreet())
+                        .build());
+
+        for (int i = 0; i < itemDtoList.size(); i++) {
+            checkOrderItem(itemDtoList.get(i), createdOrder.getId(), createdOrder.getItems().get(i));
+        }
+    }
+
+    private void 결제요청_메세지가_전송됨(Order order) {
+        Map<String, PaymentRequestAvroModel> map = readPaymentRequestRecords();
+        UUID orderId = order.getId().getValue();
+        PaymentRequestAvroModel msg = map.get(orderId.toString());
+
+        assertThat(msg.getOrderId())
+                .isEqualTo(orderId.toString());
+        assertThat(msg.getPaymentOrderStatus())
+                .isEqualTo(PaymentOrderStatus.PENDING);
+        assertThat(msg.getPrice())
+                .isEqualTo(order.getPrice().getAmount());
+        assertThat(msg.getCustomerId())
+                .isEqualTo(order.getCustomerId().getValue().toString());
+        assertThat(msg.getRestaurantId())
+                .isEqualTo(order.getRestaurantId().getValue().toString());
+    }
+
+
+    private void checkOrderItem(OrderItemDto orderItemDto, OrderId createdOrderId, OrderItem orderItem) {
+        assertThat(orderItem.getId().getOrderId())
+                .isEqualTo(createdOrderId);
+        assertThat(orderItem.getProductId().getValue())
+                .isEqualTo(orderItemDto.getProductId());
+        assertThat(orderItem.getQuantity())
+                .isEqualTo(orderItemDto.getQuantity());
+        assertThat(orderItem.getPrice())
+                .isEqualTo(Money.of(orderItemDto.getPrice()));
+    }
+
     @Test
-    void 주문추적이_성공한다() {
+    void 결제요청에대한_완료메세지_처리() throws InterruptedException {
+        //given
         orderRepository.save(ORDER);
-        entityManager.flush();
-
-        TrackOrderQuery query = TrackOrderQuery.builder()
-                .orderTrackingId(ORDER_TRACKING_ID)
-                .build();
-        TrackOrderResponse response = orderApplicationService.trackOrder(query);
-        assertNotNull(response.getOrderStatus());
-        assertEquals(ORDER_TRACKING_ID, response.getOrderTrackingId());
-    }
-
-    @Test
-    void 결제완료시_주문상태가_PAID로_변한다() throws ExecutionException, InterruptedException, TimeoutException {
-        //given
-        savePendingOrder();
-
-        UUID paymentId = UUID.randomUUID();
-        BigDecimal price = new BigDecimal("1200.00");
-
-        PaymentResponseAvroModel response = getPaymentResponseAvroModel(paymentId, price);
-
-        //when
-        TestTransaction.start();
-        paymentResponseKt.send(
-                        paymentResponseTopic,
-                        ORDER.getId().getValue().toString(),
-                        response)
-                .get();
-
-        //then
-        Thread.sleep(100);
-        Order order = assertDoesNotThrow(() -> orderRepository.findById(ORDER.getId())
-                .orElseThrow(() -> new OrderNotFoundException("Order Not found")));
-
-        assertEquals(OrderStatus.PAID, order.getOrderStatus());
-    }
-
-
-    @Test
-    void 결제완료시_식당승인요청_메세지를_전송한다() throws ExecutionException, InterruptedException, TimeoutException {
-        //given
-        savePendingOrder();
-
-        UUID paymentId = UUID.randomUUID();
-        BigDecimal price = new BigDecimal("1200.00");
-
-        PaymentResponseAvroModel response = getPaymentResponseAvroModel(paymentId, price);
-
-        //when
-        TestTransaction.start();
-        paymentResponseKt.send(
-                        paymentResponseTopic,
-                        ORDER_ID.toString(),
-                        response)
-                .get();
-
-        //then
-        Thread.sleep(100);
-        Map<String, RestaurantApprovalRequestAvroModel> resultTable = readRestaurantRequestRecords();
-        assertTrue(resultTable.containsKey(ORDER_ID.toString()));
-
-        RestaurantApprovalRequestAvroModel record = resultTable.get(ORDER_ID.toString());
-        assertEquals(ORDER_ID.toString(), record.getOrderId());
-        assertEquals(ORDER.getPrice().getAmount(), record.getPrice());
-        assertEquals(ORDER.getRestaurantId().getValue().toString(), record.getRestaurantId());
-        ORDER.getItems().stream()
-                .map(com.sangjun.order.domain.entity.OrderItem::getProduct)
-                .map(Product::getId)
-                .map(ProductId::getValue)
-                .map(UUID::toString)
-                .forEach(id ->
-                        assertDoesNotThrow(() -> record.getProducts().stream()
-                                .filter(p -> p.getId().equals(id))
-                                .findFirst().orElseThrow()));
-        assertEquals(RestaurantOrderStatus.PAID, record.getRestaurantOrderStatus());
-
-    }
-
-    private void savePendingOrder() {
         TestTransaction.flagForCommit();
-        orderRepository.save(ORDER);
-        entityManager.flush();
         TestTransaction.end();
-    }
 
-    private PaymentResponseAvroModel getPaymentResponseAvroModel(UUID paymentId, BigDecimal price) {
-        PaymentResponseAvroModel response = PaymentResponseAvroModel.newBuilder()
+        OrderId orderId = ORDER.getId();
+        UUID paymentId = UUID.randomUUID();
+        PaymentResponseAvroModel msg = PaymentResponseAvroModel.newBuilder()
                 .setId(UUID.randomUUID().toString())
-                .setOrderId(ORDER_ID.toString())
-                .setPaymentId(paymentId.toString())
-                .setCreatedAt(Instant.now())
-                .setCustomerId(CUSTOMER_ID.toString())
-                .setFailureMessages(new ArrayList<>())
-                .setSagaId("")
-                .setPrice(price)
-                .setPaymentStatus(PaymentStatus.COMPLETED)
-                .build();
-        return response;
-    }
-
-    @Test
-    void 식당승인완료시_주문상태가_APPROVED로_변한다() throws ExecutionException, InterruptedException, TimeoutException {
-        //given
-        savePaidOrder();
-
-        RestaurantApprovalResponseAvroModel response =
-                getRestaurantApprovalResponseAvroModel(OrderApprovalStatus.APPROVED);
-
-        //when
-        TestTransaction.start();
-
-        restaurantResponseKt.send(
-                restaurantResponseTopic,
-                ORDER_ID.toString(),
-                response
-        ).get();
-
-        //then
-        Thread.sleep(300);
-        Order order = assertDoesNotThrow(() -> orderRepository.findById(ORDER.getId())
-                .orElseThrow(() -> new OrderNotFoundException("Order Not found")));
-
-        assertEquals(OrderStatus.APPROVED, order.getOrderStatus());
-    }
-
-    private static RestaurantApprovalResponseAvroModel getRestaurantApprovalResponseAvroModel(OrderApprovalStatus approved) {
-        return RestaurantApprovalResponseAvroModel.newBuilder()
-                .setId(UUID.randomUUID().toString())
-                .setOrderId(ORDER_ID.toString())
-                .setCreatedAt(Instant.now())
-                .setSagaId("")
-                .setFailureMessages(new ArrayList<>())
-                .setOrderApprovalStatus(approved)
+                .setOrderId(orderId.getValue().toString())
                 .setRestaurantId(RESTAURANT_ID.toString())
+                .setCustomerId(CUSTOMER_ID.toString())
+                .setPaymentId(paymentId.toString())
+                .setPaymentStatus(PaymentStatus.COMPLETED)
+                .setSagaId("")
+                .setPrice(ORDER.getPrice().getAmount())
+                .setCreatedAt(Instant.now())
+                .setFailureMessages(Collections.emptyList())
                 .build();
+
+        //when
+        paymentResponseKt.send(paymentResponseTopic, orderId.getValue().toString(), msg);
+        Thread.sleep(250);
+
+        //then
+        TestTransaction.start();
+        Order foundOrder = orderRepository.findById(orderId).get();
+        assertThat(foundOrder.getOrderStatus())
+                .isEqualTo(OrderStatus.PAID);
+        식당승인요청_메세지_전송(foundOrder);
+    }
+
+    private void 식당승인요청_메세지_전송(Order order) {
+        Map<ProductId, Integer> productMap = order.getItems().stream()
+                .collect(Collectors.toMap(OrderItem::getProductId, OrderItem::getQuantity));
+        var key = order.getId().getValue().toString();
+        var recordMap = readRestaurantRequestRecords();
+        var request = recordMap.get(key);
+        assertThat(request.getOrderId())
+                .isEqualTo(order.getId().getValue().toString());
+        assertThat(request.getRestaurantId())
+                .isEqualTo(order.getRestaurantId().getValue().toString());
+        assertThat(request.getRestaurantOrderStatus())
+                .isEqualTo(RestaurantOrderStatus.PAID);
+        assertThat(request.getPrice())
+                .isEqualTo(order.getPrice().getAmount());
+        assertThat(request.getProducts().size())
+                .isEqualTo(order.getItems().size());
+
+        for (var product : request.getProducts()) {
+            ProductId productId = new ProductId(UUID.fromString(product.getId()));
+            assertThat(productMap.containsKey(productId))
+                    .isTrue();
+            assertThat(productMap.getOrDefault(productId, -100))
+                    .isEqualTo(product.getQuantity());
+        }
     }
 
     @Test
-    void 식당승인취소시_주문상태가_CANCELLING으로_변한다() throws ExecutionException, InterruptedException, TimeoutException {
+    void 결제요청에대한_실패메세지_처리() throws InterruptedException {
         //given
-        savePaidOrder();
-
-        RestaurantApprovalResponseAvroModel response =
-                getRestaurantApprovalResponseAvroModel(OrderApprovalStatus.REJECTED);
-
-        //when
-        TestTransaction.start();
-
-        restaurantResponseKt.send(
-                restaurantResponseTopic,
-                ORDER_ID.toString(),
-                response
-        ).get();
-
-        //then
-        Thread.sleep(100);
-
-        Order order = assertDoesNotThrow(() -> orderRepository.findById(ORDER.getId())
-                .orElseThrow(() -> new OrderNotFoundException("Order Not found")));
-
-        assertEquals(OrderStatus.CANCELLING, order.getOrderStatus());
-    }
-
-    @Test
-    void 식당주문취소시_결제취소_메세지가_날아간다() throws InterruptedException, ExecutionException {
-        //given
-        savePaidOrder();
-
-        RestaurantApprovalResponseAvroModel response =
-                getRestaurantApprovalResponseAvroModel(OrderApprovalStatus.REJECTED);
-
-        //when
-        TestTransaction.start();
-
-        restaurantResponseKt.send(
-                restaurantResponseTopic,
-                ORDER_ID.toString(),
-                response
-        ).get();
-
-        //then
-        Thread.sleep(100);
-
-        Map<String, PaymentRequestAvroModel> resultTable = readPaymentRequestRecords();
-        assertTrue(resultTable.containsKey(ORDER_ID.toString()));
-
-        PaymentRequestAvroModel record = resultTable.get(ORDER_ID.toString());
-        assertEquals(PaymentOrderStatus.CANCELLED, record.getPaymentOrderStatus());
-        assertEquals(ORDER_ID.toString(), record.getOrderId());
-        assertEquals(ORDER.getPrice().getAmount(), record.getPrice());
-        assertEquals(ORDER.getCustomerId().getValue().toString(), record.getCustomerId());
-    }
-
-    private void savePaidOrder() {
+        orderRepository.save(ORDER);
         TestTransaction.flagForCommit();
-
-        Order savedOrder = orderRepository.save(ORDER);
-        savedOrder.setOrderStatus(OrderStatus.PAID);
-        orderRepository.save(savedOrder);
-        entityManager.flush();
-
         TestTransaction.end();
+
+        OrderId orderId = ORDER.getId();
+        UUID paymentId = UUID.randomUUID();
+        PaymentResponseAvroModel msg = PaymentResponseAvroModel.newBuilder()
+                .setId(UUID.randomUUID().toString())
+                .setOrderId(orderId.getValue().toString())
+                .setRestaurantId(RESTAURANT_ID.toString())
+                .setCustomerId(CUSTOMER_ID.toString())
+                .setPaymentId(paymentId.toString())
+                .setPaymentStatus(PaymentStatus.FAILED)
+                .setSagaId("")
+                .setPrice(ORDER.getPrice().getAmount())
+                .setCreatedAt(Instant.now())
+                .setFailureMessages(Collections.emptyList())
+                .build();
+
+        //when
+        paymentResponseKt.send(paymentResponseTopic, orderId.getValue().toString(), msg);
+        Thread.sleep(200);
+
+        //then
+        //then
+        Order foundOrder = orderRepository.findById(orderId).get();
+        assertThat(foundOrder.getOrderStatus())
+                .isEqualTo(OrderStatus.CANCELLED);
     }
+
+    @Test
+    void 식당승인요청_성공메세지_처리() throws InterruptedException {
+        //given
+        ORDER.pay();
+        orderRepository.save(ORDER);
+
+        TestTransaction.flagForCommit();
+        TestTransaction.end();
+
+        var key = ORDER.getId().getValue().toString();
+        var msg = RestaurantApprovalResponseAvroModel.newBuilder()
+                .setId(UUID.randomUUID().toString())
+                .setOrderApprovalStatus(OrderApprovalStatus.APPROVED)
+                .setOrderId(ORDER.getId().getValue().toString())
+                .setRestaurantId(ORDER.getRestaurantId().getValue().toString())
+                .setFailureMessages(new ArrayList<>())
+                .setSagaId("")
+                .setCreatedAt(Instant.now())
+                .build();
+
+        //when
+        restaurantResponseKt.send(restaurantResponseTopic, key, msg);
+        Thread.sleep(200);
+
+        //then
+        Order order = orderRepository.findByTrackingId(ORDER.getTrackingId()).get();
+        assertThat(order.getOrderStatus())
+                .isEqualTo(OrderStatus.APPROVED);
+    }
+
+    @Test
+    void 식당승인요청_실패메세지_처리() throws InterruptedException {
+        //given
+        ORDER.pay();
+        orderRepository.save(ORDER);
+
+        TestTransaction.flagForCommit();
+        TestTransaction.end();
+
+        var key = ORDER.getId().getValue().toString();
+        var msg = RestaurantApprovalResponseAvroModel.newBuilder()
+                .setId(UUID.randomUUID().toString())
+                .setOrderApprovalStatus(OrderApprovalStatus.REJECTED)
+                .setOrderId(ORDER.getId().getValue().toString())
+                .setRestaurantId(ORDER.getRestaurantId().getValue().toString())
+                .setFailureMessages(new ArrayList<>())
+                .setSagaId("")
+                .setCreatedAt(Instant.now())
+                .build();
+
+        //when
+        restaurantResponseKt.send(restaurantResponseTopic, key, msg);
+        Thread.sleep(200);
+
+        //then
+        Order order = orderRepository.findByTrackingId(ORDER.getTrackingId()).get();
+        assertThat(order.getOrderStatus())
+                .isEqualTo(OrderStatus.CANCELLING);
+        결제취소요청_메세지가_전송됨(order);
+    }
+
+    private void 결제취소요청_메세지가_전송됨(Order order) {
+        var recordMap = readPaymentRequestRecords();
+        var key = order.getId().getValue().toString();
+        var msg = recordMap.get(key);
+        assertThat(msg.getOrderId())
+                .isEqualTo(order.getId().getValue().toString());
+        assertThat(msg.getRestaurantId())
+                .isEqualTo(order.getRestaurantId().getValue().toString());
+        assertThat(msg.getPrice())
+                .isEqualTo(order.getPrice().getAmount());
+        assertThat(msg.getCustomerId())
+                .isEqualTo(order.getCustomerId().getValue().toString());
+        assertThat(msg.getPaymentOrderStatus())
+                .isEqualTo(PaymentOrderStatus.CANCELLED);
+    }
+
+
+    @Test
+    void 주문_취소() {
+        //given
+        orderRepository.save(ORDER);
+
+        //when
+        CancelOrderCommand command = CancelOrderCommand.builder()
+                .orderTrackingId(ORDER.getTrackingId().getValue())
+                .customerId(CUSTOMER_ID)
+                .build();
+
+        cancelOrderService.cancelOrder(command);
+
+        //then
+        Order foundOrder = orderRepository.findByTrackingId(new TrackingId(command.getOrderTrackingId())).get();
+        assertThat(foundOrder.getOrderStatus())
+                .isEqualTo(OrderStatus.CANCELLING);
+        주문취소_이벤트가_발행됨();
+    }
+
+    /**
+     * Todo
+     * 주문취소를 완료하기위해 주문취소 이벤트를 구독하여 다른 BoundedContext에 메세지를 보내도록 구현
+     */
+    private void 주문취소_이벤트가_발행됨() {
+        var cancellingEventList = applicationEvents.stream()
+                .filter(event -> event instanceof OrderCancellingEvent)
+                .toList();
+        assertThat(cancellingEventList)
+                .hasSize(1);
+    }
+
 
     private Map<String, PaymentRequestAvroModel> readPaymentRequestRecords() {
-        ConsumerRecords<String, PaymentRequestAvroModel> result = KafkaTestUtils.getRecords(paymentRequestConsumer, 100);
+        ConsumerRecords<String, PaymentRequestAvroModel> result =
+                KafkaTestUtils.getRecords(paymentRequestConsumer, 100);
         Map<String, PaymentRequestAvroModel> resultTable = new HashMap<>();
         result.forEach(rec -> resultTable.put(rec.key(), rec.value()));
         paymentRequestConsumer.commitSync();
@@ -571,5 +561,4 @@ public class OrderIntegrationTest {
         restaurantRequestConsumer.commitSync();
         return resultTable;
     }
-
 }
